specification-example/project/om-datacenter/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: om-datacenter
  namespace: ai-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: om-datacenter.ai.test.osinfra.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: om-datacenter
                port:
                  number: 80
